--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -1,9 +1,9 @@
 name: Build GDExtension
 on:
   workflow_call:
-  push:
-  pull_request:
-  merge_group:
+
+env:
+  LIBNAME: gde-v
 
 jobs:
   build:
@@ -257,13 +257,12 @@ jobs:
           #   os: ubuntu-20.04
     runs-on: ${{ matrix.os }}
     steps:
-      # Clone this repository
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: true
 
-      # Lint
+# Lint
       #- name: Setup clang-format
       #  shell: bash
       #  run: |
@@ -273,27 +272,16 @@ jobs:
       #  run: |
       #    clang-format src/** --dry-run --Werror
 
-      # Setup dependencies
-      - name: Setup godot-cpp
-        uses: ./godot-cpp/.github/actions/setup-godot-cpp
+# Build
+      - name: 🔗 GDExtension Debug Build
+        uses: ./.github/actions/build
         with:
           platform: ${{ matrix.platform }}
-          em-version: 3.1.62
+          arch: ${{ matrix.arch }}
+          float-precision: ${{ matrix.float-precision }}
+          build-target-type: ${{ matrix.target-type }}
 
-      # Build GDExtension (with caches)
-      - name: Cache .scons_cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ github.workspace }}/.scons-cache/
-          key: ${{ matrix.platform }}_${{ matrix.arch }}_${{ matrix.float-precision }}_${{ matrix.target-type }}_cache
-      - name: Build GDExtension Debug Build
-        shell: sh
-        env:
-          SCONS_CACHE: ${{ github.workspace }}/.scons-cache/
-        run: |
-          scons target=${{ matrix.target-type }} platform=${{ matrix.platform }} arch=${{ matrix.arch }} precision=${{ matrix.float-precision }}
-
-      # Sign the binary (macOS only)
+# Sign
       - name: Mac Sign
         # Disable sign if secrets are not set
         if: ${{ matrix.platform == 'macos' && env.APPLE_CERT_BASE64 }}
@@ -309,21 +297,18 @@ jobs:
           APPLE_DEV_TEAM_ID: ${{ secrets.APPLE_DEV_TEAM_ID }}
           APPLE_DEV_APP_ID: ${{ secrets.APPLE_DEV_APP_ID }}
 
-      # Clean up compilation files
       - name: Windows - Delete compilation files
         if: ${{ matrix.platform == 'windows' }}
         shell: pwsh
         run: |
           Remove-Item bin/* -Include *.exp,*.lib,*.pdb -Force
-
-      # Upload the build
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: gde_v-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.float-precision }}-${{ matrix.target-type }}
           path: |
             ${{ github.workspace }}/bin/
-            ${{ github.workspace }}/gde-v.gdextension${{ github.workspace }}/gde-v.gdextension
+            ${{ github.workspace }}/gde-v.gdextension
 
   # Merges all the build artifacts together into a single gde_v artifact.
   # If you comment out this step, all the builds will be uploaded individually.
