Updated license, readme, builds
Updated to add LICENSE.extern, listing all the external library licenses.

Updated README.md some

Updated builds to add the license files.

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -308,6 +308,8 @@ jobs:
           path: |
             ${{ github.workspace }}/bin/
             ${{ github.workspace }}/gde-v.gdextension
+            ${{ github.workspace }}/LICENSE
+            ${{ github.workspace }}/LICENSE.extern
 
   # Merges all the build artifacts together into a single gde_v artifact.
   # If you comment out this step, all the builds will be uploaded individually.
