--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -78,59 +78,59 @@ jobs:
             target-type: template_release
             os: ubuntu-20.04
 
-          # - platform: windows
-          #   float-precision: single
-          #   arch: x86_32
-          #   target-type: template_release
-          #   os: windows-latest
+          - platform: windows
+            float-precision: single
+            arch: x86_32
+            target-type: template_release
+            os: windows-latest
 
-          # - platform: windows
-          #   float-precision: single
-          #   arch: x86_64
-          #   target-type: template_release
-          #   os: windows-latest
+          - platform: windows
+            float-precision: single
+            arch: x86_64
+            target-type: template_release
+            os: windows-latest
 
-          # - platform: macos
-          #   float-precision: single
-          #   arch: universal
-          #   target-type: template_release
-          #   os: macos-latest
+          - platform: macos
+            float-precision: single
+            arch: universal
+            target-type: template_release
+            os: macos-latest
 
-          # - platform: android
-          #   float-precision: single
-          #   arch: arm64
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: single
+            arch: arm64
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: single
-          #   arch: arm32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: single
+            arch: arm32
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: single
-          #   arch: x86_64
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: single
+            arch: x86_64
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: single
-          #   arch: x86_32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: single
+            arch: x86_32
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: ios
-          #   float-precision: single
-          #   arch: arm64
-          #   target-type: template_release
-          #   os: macos-latest
+          - platform: ios
+            float-precision: single
+            arch: arm64
+            target-type: template_release
+            os: macos-latest
 
-          # - platform: web
-          #   float-precision: single
-          #   arch: wasm32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: web
+            float-precision: single
+            arch: wasm32
+            target-type: template_release
+            os: ubuntu-20.04
 
         # Double precision templates
         # Double precision debug templates
@@ -201,59 +201,59 @@ jobs:
             target-type: template_release
             os: ubuntu-20.04
 
-          # - platform: windows
-          #   float-precision: double
-          #   arch: x86_32
-          #   target-type: template_release
-          #   os: windows-latest
+          - platform: windows
+            float-precision: double
+            arch: x86_32
+            target-type: template_release
+            os: windows-latest
 
-          # - platform: windows
-          #   float-precision: double
-          #   arch: x86_64
-          #   target-type: template_release
-          #   os: windows-latest
+          - platform: windows
+            float-precision: double
+            arch: x86_64
+            target-type: template_release
+            os: windows-latest
 
-          # - platform: macos
-          #   float-precision: double
-          #   arch: universal
-          #   target-type: template_release
-          #   os: macos-latest
+          - platform: macos
+            float-precision: double
+            arch: universal
+            target-type: template_release
+            os: macos-latest
 
-          # - platform: android
-          #   float-precision: double
-          #   arch: arm64
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: double
+            arch: arm64
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: double
-          #   arch: arm32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: double
+            arch: arm32
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: double
-          #   arch: x86_64
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: double
+            arch: x86_64
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: android
-          #   float-precision: double
-          #   arch: x86_32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: android
+            float-precision: double
+            arch: x86_32
+            target-type: template_release
+            os: ubuntu-20.04
 
-          # - platform: ios
-          #   float-precision: double
-          #   arch: arm64
-          #   target-type: template_release
-          #   os: macos-latest
+          - platform: ios
+            float-precision: double
+            arch: arm64
+            target-type: template_release
+            os: macos-latest
 
-          # - platform: web
-          #   float-precision: double
-          #   arch: wasm32
-          #   target-type: template_release
-          #   os: ubuntu-20.04
+          - platform: web
+            float-precision: double
+            arch: wasm32
+            target-type: template_release
+            os: ubuntu-20.04
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -317,9 +317,21 @@ jobs:
     runs-on: ubuntu-20.04
     needs: build
     steps:
+      - name: Merge Debug Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: gde_v-template_debug
+          pattern: gde_v-*-template_debug
+          delete-merged: true
+      - name: Merge Release Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: gde_v-template_release
+          pattern: gde_v-*-template_release
+          delete-merged: true
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
         with:
-          name: gde_v
+          name: gde_v-full
           pattern: gde_v-*
-          delete-merged: true
+          delete-merged: false
